# geographiclib-c

./: 00README.md  CMakeLists.txt  HOWTO-RELEASE.txt  README.md
distrib-C/: 00README.md
doc/: CMakeLists.txt  doxyfile-c.in  doxyfile.in  geodesic-c.dox  geodesic-c.dox.in
proj-example/: CMakeLists.txt  proj-example.c
src/: CMakeLists.txt  geodesic.c  geodesic.h
tests/: CMakeLists.txt  geodsigntest.c  geodtest.c  signtest.c
tools/: CMakeLists.txt  direct.c  geodtest.c  inverse.c  planimeter.c
